--- a/theme/snippets/jumplink-form-inputs-customer-create.liquid
+++ b/theme/snippets/jumplink-form-inputs-customer-create.liquid
@@ -141,7 +141,7 @@
 <small class="custom-control custom-checkbox mb-3">
   <input type="checkbox" class="custom-control-input" name="contact[privacy]" id="acceptPrivacy" required>
   <label class="custom-control-label" for="acceptPrivacy">
-    Yes, I authorise the processing of my personal data according to the <a href="/pages/it-recht-datenschutz">Privacy Policy</a>.<br>
+    Yes, I authorise the processing of my personal data according to the <a href="/pages/it-recht-datenschutz">Privacy Policy</a>.
   </label>
 </small>
 
